[project]
name = "ultra-sandbox"
version = "0.2.0"
description = "MCP server giving Claude a persistent, multi-language build/test/repair loop (local Docker + remote EC2 Mac), with a status dashboard and docs search."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ultra-sandbox = "ultra_sandbox.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ultra_sandbox"]
